[gd_scene load_steps=14 format=3 uid="uid://cwegtty4ubuew"]

[ext_resource type="PackedScene" uid="uid://dmtst8fnji83l" path="res://scenes/component/health_component.tscn" id="1_1t0vd"]
[ext_resource type="Script" path="res://scenes/game_object/boss/boss.gd" id="1_m3ob5"]
[ext_resource type="PackedScene" uid="uid://3m23b2v7bw1k" path="res://scenes/component/drop_on_death_component.tscn" id="2_0x4hd"]
[ext_resource type="PackedScene" uid="uid://bg3se6ow6a6si" path="res://scenes/component/velocity_component.tscn" id="3_qc8h4"]
[ext_resource type="PackedScene" uid="uid://dlhs5usxgosa1" path="res://scenes/game_object/last_hit_orb/last_hit_orb.tscn" id="4_8uwfm"]
[ext_resource type="PackedScene" uid="uid://c7rtcedycu7kt" path="res://scenes/component/hurtbox_component.tscn" id="4_moee5"]
[ext_resource type="PackedScene" uid="uid://dhm4vdomkwy7m" path="res://scenes/component/health_bar_component.tscn" id="6_qd6uc"]
[ext_resource type="Texture2D" uid="uid://bhsr0p7cb8ks1" path="res://scenes/game_object/boss/ship_0003.png" id="9_racpd"]
[ext_resource type="PackedScene" uid="uid://ojcqxe0ojag5" path="res://scenes/component/movement_component/enemy_movement_component.tscn" id="11_5pl28"]
[ext_resource type="PackedScene" uid="uid://dy1ukbli5hfms" path="res://scenes/component/rotation_component.tscn" id="11_vpl1m"]
[ext_resource type="PackedScene" uid="uid://cm0gcg1tcv76f" path="res://scenes/component/trail_component.tscn" id="12_ask5m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dvb6p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_64img"]

[node name="Boss" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_m3ob5")

[node name="TrailComponent" parent="." instance=ExtResource("12_ask5m")]
is_emitting = true

[node name="HealthComponent" parent="." instance=ExtResource("1_1t0vd")]
max_health = 200

[node name="DropOnDeathComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_0x4hd")]
drop_percent = 1.0
health_component = NodePath("../HealthComponent")
gold_scene = ExtResource("4_8uwfm")

[node name="VelocityComponent" parent="." instance=ExtResource("3_qc8h4")]
max_speed = 400

[node name="HealthBarComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_qd6uc")]
health_component = NodePath("../HealthComponent")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_moee5")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_dvb6p")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
rotation = 1.5708
texture = ExtResource("9_racpd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_64img")

[node name="RotationComponent" parent="." node_paths=PackedStringArray("pivot_node") instance=ExtResource("11_vpl1m")]
pivot_node = NodePath("../Visuals")
rotation_speed = 20.0

[node name="EnemyMovementComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("11_5pl28")]
velocity_component = NodePath("../VelocityComponent")
